fix(a11y): fix color contrasts for combobox pills border

--- a/projects/angular/src/utils/_theme.dark.clarity.scss
+++ b/projects/angular/src/utils/_theme.dark.clarity.scss
@@ -489,7 +489,7 @@ $clr-forms-range-track-color: hsl(200, 23%, 25%);
 $clr-combobox-border-color: hsl(198, 30%, 8%);
 $clr-combobox-input-background-color: hsl(198, 28%, 18%);
 $clr-combobox-pill-background-color: hsl(201, 30%, 15%);
-$clr-combobox-pill-border-color: hsl(208, 16%, 34%);
+$clr-combobox-pill-border-color: hsl(204, 10%, 60%);
 $clr-combobox-pill-font-color: hsl(0, 0%, 75%);
 $clr-combobox-filter-highlight: hsl(198, 16%, 93%);
 
